# Copperhead

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
copperhead_builder/: Cargo.toml
copperhead_builder/src/: main.rs  simulation.rs
copperhead_builder/src/ui/: app.rs  app_state.rs  drawing.rs  mod.rs  netlist.rs  ui.rs
copperhead_builder/src/ui/components/: canvas.rs  mod.rs  modals.rs  oscilloscope.rs  palette.rs  property_panel.rs  side_panel.rs  top_bar.rs
copperhead_builder/src/ui/components/definitions/: audio_probe.rs  bjt.rs  capacitor.rs  diode.rs  ground.rs  inductor.rs  label.rs  mod.rs  pentode.rs  potentiometer.rs  resistor.rs  switch.rs  triode.rs  voltage_source.rs
copperhead_builder/src/ui/tools/: erasing.rs  mod.rs  movement.rs  placement.rs  selection.rs  wiring.rs
copperhead_builder/src/ui/util/: mod.rs
copperhead_core/: Cargo.toml
copperhead_core/src/: audio.rs  circuit.rs  descriptor.rs  lib.rs  model.rs  processor.rs  signals.rs
copperhead_core/src/components/: audio_probe.rs  capacitor.rs  diode.rs  inductor.rs  mod.rs  pentode.rs  potentiometer.rs  resistor.rs  switch.rs  triode.rs  voltage_source.rs
copperhead_core/src/components/pentode/: generic_pentode.rs  mod.rs  physical_pentode.rs
copperhead_core/src/components/transistor/: bjt.rs
copperhead_core/src/components/triode/: generic_triode.rs  mod.rs  physical_triode.rs
copperhead_core/src/components/tube/: mod.rs
copperhead_core/src/components/tube/triode/: generic_triode.rs  mod.rs  physical_triode.rs
copperhead_core/src/util/: math.rs  mna.rs
copperhead_plugin/: Cargo.toml
copperhead_plugin/src/: build_circuit.rs  editor.rs  lib.rs  main.rs
src/: audio.rs  circuit.rs  main.rs  model.rs  signals.rs  simulation.rs  util.rs
src/components/: audio_probe.rs  capacitor.rs  diode.rs  inductor.rs  mod.rs  resistor.rs  triode.rs  voltage_source.rs
src/components/transistor/: bjt.rs  mod.rs
src/ui/: app.rs  drawing.rs  mod.rs  netlist.rs  ui.rs
src/ui/components/: canvas.rs  mod.rs  modals.rs  oscilloscope.rs  side_panel.rs  top_bar.rs
src/ui/tools/: erasing.rs  mod.rs  placement.rs  selection.rs  wiring.rs
src/ui/util/: mod.rs
src/util/: math.rs  mna.rs  mod.rs
