[package]
name = "Copperhead"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = "0.23.2"
egui = "0.33.3"
serde = "1.0.228"
hound = "3.5.1"
egui_plot = "0.34.0"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
eframe = "0.33.3"
num-traits = "0.2.19"
log = "0.4.29"
portable-atomic = "1.13.0"

[profile.release-performance]
inherits = "release"
lto = "fat"
codegen-units = 1