[package]
name = "Copperhead"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
faer = "0.24.0"
egui = "0.33.3"
serde = "1.0.228"
hound = "3.5.1"
egui_plot = "0.34.0"
crossbeam = "0.8.4"
parking_lot = "0.12.5"
eframe = "0.33.3"
num-traits = "0.2.19"
log = "0.4.29"
portable-atomic = "1.13.0"
rfd = "0.17.2"
serde_json = "1.0.149"
dirs = "6.0.0"
open = "5.3.3"
petgraph = "0.8.3"
env_logger = "0.11.9"
symphonia = "0.5.5"
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"

[profile.release-performance]
inherits = "release"
lto = "fat"
codegen-units = 1