[package]
name = "copperhead_builder"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
egui = "0.33.3"
eframe = "0.33.3"
env_logger = "0.11.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
crossbeam = "0.8.4"
copperhead_core = { path = "../copperhead_core" }
log = "0.4.29"
dirs = "6.0.0"
rfd = "0.17.2"
open = "5.3.3"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }

tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.4", optional = true }


[features]
default = []
profiling = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy", "dep:tracy-client"]

[profile.release-performance]
inherits = "release"
lto = "fat"
codegen-units = 1