[package]
name = "copperhead_core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]

[dependencies]
faer = "0.24.0"
egui = "0.33.3"
serde = "1.0.228"
hound = "3.5.1"
num-traits = "0.2.19"
log = "0.4.29"
portable-atomic = "1.13.0"
petgraph = "0.8.3"
symphonia = "0.5.5"
rubato = "1.0.1"
audioadapter-buffers = "2.0.0"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }

tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.4", optional = true }

[features]
default = []
profiling = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy", "dep:tracy-client"]

[profile.release-performance]
inherits = "release"
lto = "fat"
codegen-units = 1