[package]
name = "copperhead_plugin"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
copperhead_core = { path = "../copperhead_core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
vizia_plug = { git = "https://github.com/vizia/vizia-plug.git" }
rfd = "0.17.2"
crossbeam-channel = "0.5.15"

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }

tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.4", optional = true }

[features]
default = []
profiling = ["dep:tracing", "dep:tracing-subscriber", "dep:tracing-tracy", "dep:tracy-client"]

[profile.release]
lto = "fat"
codegen-units = 1